// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-core/InputField renders correctly 1`] = `
<View
  style={
    [
      {
        "minWidth": 195,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 21,
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EEEFF1",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "paddingLeft": 27,
          "paddingRight": 24,
          "paddingVertical": 0,
        },
        {
          "height": 72,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "flex": 1,
            "padding": 0,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#9BA1B0",
          "fontFamily": "Neotis",
          "fontSize": 24,
          "marginRight": 6,
        }
      }
    >
      
    </Text>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#9BA1B0",
            "fontFamily": "Inter-Regular",
            "fontSize": 18,
            "lineHeight": 24,
          },
          {
            "flex": 1,
          },
        ]
      }
    >
      subtitle
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-core/InputField renders correctly disabled 1`] = `
<View
  style={
    [
      {
        "minWidth": 195,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#D1D4DB",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "paddingLeft": 27,
          "paddingRight": 24,
          "paddingVertical": 0,
        },
        {
          "height": 72,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "flex": 1,
            "padding": 0,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-core/InputField renders correctly disabled 2`] = `
<View
  style={
    [
      {
        "minWidth": 195,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#D1D4DB",
          "borderColor": "#D1D4DB",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "paddingLeft": 27,
          "paddingRight": 24,
          "paddingVertical": 0,
        },
        {
          "height": 72,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "flex": 1,
            "padding": 0,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-core/InputField renders correctly focused/blur 1`] = `
<View
  style={
    [
      {
        "minWidth": 195,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EEEFF1",
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "paddingLeft": 27,
          "paddingRight": 24,
          "paddingVertical": 0,
        },
        {
          "height": 72,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "flex": 1,
            "padding": 0,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-core/InputField renders correctly focused/blur 2`] = `
<View
  style={
    [
      {
        "minWidth": 195,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EEEFF1",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "paddingLeft": 27,
          "paddingRight": 24,
          "paddingVertical": 0,
        },
        {
          "height": 72,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "flex": 1,
            "padding": 0,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-core/InputField renders correctly multiline = false 1`] = `
<View
  style={
    [
      {
        "minWidth": 195,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 21,
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EEEFF1",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "paddingLeft": 27,
          "paddingRight": 24,
          "paddingVertical": 0,
        },
        {
          "height": 72,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "flex": 1,
            "padding": 0,
          },
          [
            {
              "color": "#20242D",
              "fontSize": 24,
              "padding": 0,
            },
          ],
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-core/InputField renders correctly multiline = true 1`] = `
<View
  style={
    [
      {
        "minWidth": 195,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 21,
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "backgroundColor": "#EEEFF1",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "paddingLeft": 27,
          "paddingRight": 24,
          "paddingVertical": 18,
        },
        {
          "minHeight": 120,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      multiline={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "flex": 1,
            "padding": 0,
          },
          [
            {
              "color": "#20242D",
              "fontSize": 24,
              "padding": 0,
            },
          ],
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-core/InputField renders correctly secureTextEntry 1`] = `
<View
  style={
    [
      {
        "minWidth": 195,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 21,
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EEEFF1",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "paddingLeft": 27,
          "paddingRight": 24,
          "paddingVertical": 0,
        },
        {
          "height": 72,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      secureTextEntry={true}
      selectionColor="#2B78EE"
      style={
        [
          {
            "flex": 1,
            "padding": 0,
          },
          [
            {
              "color": "#20242D",
              "fontSize": 24,
              "padding": 0,
            },
          ],
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#9BA1B0",
          "fontFamily": "Neotis",
          "fontSize": 24,
          "marginRight": 6,
        }
      }
    >
      
    </Text>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#9BA1B0",
            "fontFamily": "Inter-Regular",
            "fontSize": 18,
            "lineHeight": 24,
          },
          {
            "flex": 1,
          },
        ]
      }
    >
      subtitle
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-core/InputField renders correctly valid 1`] = `
<View
  style={
    [
      {
        "minWidth": 195,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(43, 120, 238, 0.15)",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "paddingLeft": 27,
          "paddingRight": 24,
          "paddingVertical": 0,
        },
        {
          "height": 72,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "flex": 1,
            "padding": 0,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-core/InputField renders correctly valid 2`] = `
<View
  style={
    [
      {
        "minWidth": 195,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(43, 120, 238, 0.15)",
          "borderColor": "#2B78EE",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "paddingLeft": 27,
          "paddingRight": 24,
          "paddingVertical": 0,
        },
        {
          "height": 72,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "flex": 1,
            "padding": 0,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-core/InputField renders correctly wrong 1`] = `
<View
  style={
    [
      {
        "minWidth": 195,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(245, 77, 61, 0.15)",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "paddingLeft": 27,
          "paddingRight": 24,
          "paddingVertical": 0,
        },
        {
          "height": 72,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "flex": 1,
            "padding": 0,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#F54D3D",
          "fontFamily": "Neotis",
          "fontSize": 24,
          "marginRight": 6,
        }
      }
    >
      
    </Text>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#F54D3D",
            "fontFamily": "Inter-Regular",
            "fontSize": 18,
            "lineHeight": 24,
          },
          {
            "flex": 1,
          },
        ]
      }
    >
      subtitle
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-core/InputField renders correctly wrong 2`] = `
<View
  style={
    [
      {
        "minWidth": 195,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(245, 77, 61, 0.15)",
          "borderColor": "#F54D3D",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "paddingLeft": 27,
          "paddingRight": 24,
          "paddingVertical": 0,
        },
        {
          "height": 72,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "flex": 1,
            "padding": 0,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#F54D3D",
          "fontFamily": "Neotis",
          "fontSize": 24,
          "marginRight": 6,
        }
      }
    >
      
    </Text>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#F54D3D",
            "fontFamily": "Inter-Regular",
            "fontSize": 18,
            "lineHeight": 24,
          },
          {
            "flex": 1,
          },
        ]
      }
    >
      subtitle
    </Text>
  </View>
</View>
`;
